fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,7 @@
     margin: 0;
     padding: 0;
 }
-body{
-    background:black;
-}
+
 .dark{
     background-color: antiquewhite;
     color: brown;
